# stockreco

./: .gitignore  README.md  README_OPTIONS_ADDON.md  REQUIREMENTS_NOTE.txt  RUN_ALL_README.md  bt_20251201_12.csv  options_upgrade.patch  package-lock.json  package.json  pyproject.toml  run.md  run_all.sh
data/: nomenclature  ohlcv.parquet
data/stocks/: block.csv  bulk.csv  shortselling_16122025.csv
docs/: llm-options-plan.md  llm-options-walkthrough.md  options-reviewer-implementation.md  options-reviewer-plan.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx
reports/: 2025-12-10_aggressive.json  2025-12-10_aggressive.md  2025-12-10_strict.json  2025-12-10_strict.md  2025-12-12_aggressive.json  2025-12-12_aggressive.md  2025-12-12_strict.md  2025-12-15.json  2025-12-15.md  2025-12-15_aggressive.json  2025-12-15_aggressive.md  2025-12-15_strict.json  2025-12-15_strict.md
reports/mcx/: mcx_reco_2025-12-12.csv  (+7 more)
scripts/: analyze_reco.py  analyze_signals.py  backtest.py  check_marketdata.py  check_nse_direct.py  debug_agent.py  debug_bharti.py  debug_bhav.py  debug_cols.py  debug_fo.py  debug_nifty_load.py  debug_provider.py  debug_spot.py  debug_strikes.py  debug_total_oi.py  debug_volt.py  generate_mcx_recos.py  generate_option_performance.py  run_all.py  run_daily_full_pipeline.py  run_eod_option_reco.py  run_intraday_option_reco.py  run_ui_api.py  temp_backfill_perf_v2.py  verify_data_ingest.py
tests/: test_option_reco_logic.py  test_option_reviewer.py  test_options_expiry_logic.py
(+233 files in other folders)
