[project]
name = "stockreco"
version = "0.1.0"
description = "EOD Nifty-50 momentum recommender with proposer/reviewer/analyst pipeline."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.1",
  "numpy>=1.26",
  "yfinance>=0.2.54",
  "requests>=2.31",
  "pydantic>=2.7",
  "scikit-learn>=1.4",
  "lightgbm>=4.3",
  "ta>=0.11.0",
  "typer>=0.12.5",
  "rich>=13.7",
  "python-dotenv>=1.0",
  "pyarrow>=15.0",
  "tabulate>=0.9",

]

[project.scripts]
stockreco = "stockreco.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}
